--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
         <ons-page>
             <ons-toolbar>
                 <div class="center">
-                    Add 2 numbers
+                    Project Adder
                 </div>
             </ons-toolbar>
             <div style="text-align: center;">
